k8s/bls.yaml
apiVersion: v1
kind: Service
metadata:
  name: bls
spec:
  selector:
    app: bls
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bls
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bls
  template:
    metadata:
      labels:
        app: bls
    spec:
      containers:
        - name: bls
          image: rtdashboard_bsl
          ports:
            - containerPort: 80
          imagePullPolicy: Always
