k8s/dao.yaml
apiVersion: v1
kind: Service
metadata:
  name: dao
spec:
  selector:
    app: dao
  ports:
    - port: 81
      targetPort: 81
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dao
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dao
  template:
    metadata:
      labels:
        app: dao
    spec:
      containers:
        - name: dao
          image: rtdashboard_dao
          ports:
            - containerPort: 80
          imagePullPolicy: Always
