k8s/pgadmin.yaml

apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - port: 80
      targetPort: 5050
  type: LoadBalancer

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5050
          volumeMounts:
            - mountPath: /var/lib/pgadmin
              name: pgadmin
      volumes:
        - name: pgadmin
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim
